fixed form input spacing

--- a/app/assets/stylesheets/edit_preferences.scss
+++ b/app/assets/stylesheets/edit_preferences.scss
@@ -3,10 +3,8 @@
 }
 
 .edit-form {
-    position: relative;
-    left: 15%;
-    padding-top: 100px;
-    width: 4300;
+    padding-top: 40px;
+    padding-left: 175px;
 }
 
 
@@ -22,5 +20,25 @@
 
 .edin {
 	width: 20% !important;
+	position: relative !important;
+	top: 3px !important;
+}
 
+.edsel {
+	position: relative !important;
+	top: 10px !important;	
+}
+
+.edit-label {
+	padding-left: 100px;
+	padding-top: 50px;
+	color: #333;
+    font-size: 60px;
+    font-family: 'Roboto';
+    font-weight: 500;
+}
+
+.radios {
+	position: relative !important;
+	top: 10px !important;	
 }
